--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,10 @@ spring.thymeleaf.cache = false
 
 #mysql 접속정보
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://air.cmii8w5hltac.ap-northeast-2.rds.amazonaws.com:3306/air?serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=12345678
+#spring.datasource.url=jdbc:mysql://localhost:3306/air?serverTimezone=UTC
+
+#spring.datasource.username=root
+#spring.datasource.password=1234
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
@@ -31,3 +32,8 @@ spring.jpa.properties.hibernate.use_sql_comments=false
 logging.level.org.hibernate.type.descriptor.sql=false
 
 airImgLocation = /home/ubuntu/air/airImg/
+uploadPath = file : /home/ubuntu/air/airImg/
+
+spring.datasource.username=admin
+spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://air.cmii8w5hltac.ap-northeast-2.rds.amazonaws.com:3306/air?serverTimezone=UTC
